# nostr-rs-relay

./: Cargo.toml  Dockerfile.sqlite  README-docker-fix.md  fix-docker-build.md
examples/: nip17_example.rs
src/: db.rs  event.rs  lib.rs  nip17.rs  nip17_relay.rs  nip44.rs  nip44_relay.rs  nip59.rs  nip59_relay.rs  server.rs  subscription.rs
src/repo/: mod.rs  sqlite.rs  sqlite_migration.rs
tests/: nip17_relay_test.rs  nip17_test.rs  nip44_relay_test.rs  nip44_test.rs  nip59_relay_test.rs  nip59_test.rs
